[package]
name = "uniswap-x-substream"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uniswap_x_substreams"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
anyhow = "1"
ethabi = "17"
hex-literal = "0.3"
num-bigint = "0.4"
prost = "0.11"
# Use latest from https://crates.io/crates/substreams
substreams = "0.5"
# Use latest from https://crates.io/crates/substreams-database-change
substreams-database-change = "1.3"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.9"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"

[dev-dependencies]
base64 = "0.21.5"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
